Testing commit permissions
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@27368 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/Resources/Private/Files/fileadmin/default/templates/css/stylesheet.css
+++ b/demo/Resources/Private/Files/fileadmin/default/templates/css/stylesheet.css
@@ -381,6 +381,7 @@ input#tx-indexedsearch-searchbox-sword {
 	font-size: 90%;
 }
 /* Demo Addtions - REMOVE THESE AGAIN AFTER T3UCW09 */
+/* Actually - no, they should not be removed, but needs cleaning up */
 .themeColorForeground {color:#D61423;}
 .themeColorBackground {background-color:#D61423;}
 
