Added needed !important rule to .themeColorBackground
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@27384 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/Resources/Private/Files/fileadmin/default/templates/css/stylesheet.css
+++ b/demo/Resources/Private/Files/fileadmin/default/templates/css/stylesheet.css
@@ -486,7 +486,7 @@ input#tx-indexedsearch-searchbox-sword {
 	color:#D61423;
 	}
 .themeColorBackground {
-	background-color:#D61423;
+	background-color:#D61423 !important;
 	}
 
 div#header {
