* Set the correct number of additional steps. * Changed the handling of step '5' in order not to skip a step.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@32251 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/Resources/Private/Templates/Installdemo.html
+++ b/demo/Resources/Private/Templates/Installdemo.html
@@ -24,6 +24,8 @@
 					This will install a bare TYPO3 system with basic database and folder structure.</label>
 				</fieldset>
 				<fieldset style="border-width: 0;">
+					<input type="hidden" name="TYPO3_INSTALL[database_type]" value="import|CURRENT_TABLES+STATIC" />
+					<input type="hidden" name="TYPO3_INSTALL[database_import_all]" value="1" />
 					<input type="submit" value="Continue" />
 				</fieldset>
 			</form>
