Changed styling of the screens according to the styling of installer. Fixes #7160
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@32252 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/Resources/Private/Templates/Finish.html
+++ b/demo/Resources/Private/Templates/Finish.html
@@ -20,8 +20,8 @@
 			<!-- ###REMOVE_ENABLE_INSTALL_TOOL_REMOVEWHENEMPTY### end -->
 			
 			<form method="post" action="../../">
-				<fieldset style="border: 0;">
-					<input type="submit" value="Go to your Website" />
+				<fieldset>
+					<button>Go to your Website<span class="positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 			<!-- ###TEMPLATE### end-->
