--- a/demo/Resources/Private/Templates/Finishblank.html
+++ b/demo/Resources/Private/Templates/Finishblank.html
@@ -16,15 +16,15 @@
 			<p>TYPO3 has been successfully installed on your system!</p>
 			<p></p>
 			<p>An administrator account has been created:</p>
-			<dl>
+			<dl id="stepOutputSummary" class="clearfix">
 				<dt>Username</dt>
 				<dd>admin</dd>
 				<dt>Password</dt>
 				<dd>password</dd>
 			</dl>
 			<form method="post" action="../">
-				<fieldset style="border: 0;">
-					<input type="submit" value="Go to the TYPO3 backend" />
+				<fieldset>
+					<button>Go to the TYPO3 backend<span class="positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 			<!-- ###TEMPLATE### end-->
