--- a/demo/Resources/Private/Templates/Installdemo.html
+++ b/demo/Resources/Private/Templates/Installdemo.html
@@ -15,7 +15,7 @@
 			<!-- ###TEMPLATE### begin-->
 			<p>Please select the package you want to install for your TYPO3 System.</p>
 			<form action="index.php?TYPO3_INSTALL[type]=database&mode=123&step=5" method="post">
-				<fieldset style="border-width: 0;">
+				<fieldset class="labelAfter">
 					<input id="systemToInstallDemo" type="radio" name="systemToInstall" value="demo" checked="checked" />
 					<label for="systemToInstallDemo"><strong>Demo System (recommended)</strong><br />
 					This will install a TYPO3 system including a demo website with all basic configuration, content elements and a few extensions.</label><br />
@@ -23,10 +23,10 @@
 					<label for="systemToInstallEmpty"><strong>Blank System</strong><br />
 					This will install a bare TYPO3 system with basic database and folder structure.</label>
 				</fieldset>
-				<fieldset style="border-width: 0;">
+				<fieldset>
 					<input type="hidden" name="TYPO3_INSTALL[database_type]" value="import|CURRENT_TABLES+STATIC" />
 					<input type="hidden" name="TYPO3_INSTALL[database_import_all]" value="1" />
-					<input type="submit" value="Continue" />
+					<button>Continue<span class="positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 			<!-- ###TEMPLATE### end-->
