--- a/demo/Resources/Private/Templates/Password.html
+++ b/demo/Resources/Private/Templates/Password.html
@@ -35,7 +35,7 @@
 		</script>
 		<div>
 			<form action="index.php?TYPO3_INSTALL[type]=database&mode=123&step=6" method="post">
-				<fieldset style="border-width: 0;">
+				<fieldset>
 					<legend><strong>Enter a password</strong></legend>
 					<p>Please choose a password for your TYPO3 installation.</p>
 					<p>It should be at least 6 characters long.</p>
@@ -47,7 +47,7 @@
 					<input name="useRealURL" id="useRealURL" type="hidden" value="0" />
 				</fieldset>
 				<div style="height: 20px;"></div>
-				<fieldset style="border-width: 0;">
+				<fieldset>
 					<legend><strong>Introduction package</strong></legend>
 					<p>Here you can choose a color for your demo webpage.</p>
 					<p></p>
@@ -59,8 +59,8 @@
 						<img src="###PATH_TO_RESOURCES###/Images/preview_icon.png" />
 					</span>
 				</fieldset>
-				<fieldset style="border-width: 0;">
-					<input type="submit" value="Continue" />
+				<fieldset>
+					<button>Continue<span class="positive">&nbsp;</span></button>
 				</fieldset>
 				<script type="text/javascript" src="###PATH_TO_RESOURCES###/Javascript/jscolor.js"></script>
 				<script language="javascript">
