Changed the name of the CSS classes as they where changed in the CSS of the install extension. Fixes #7441.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@32527 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/Resources/Private/Templates/Finishblank.html
+++ b/demo/Resources/Private/Templates/Finishblank.html
@@ -16,7 +16,7 @@
 			<p>TYPO3 has been successfully installed on your system!</p>
 			<p></p>
 			<p>An administrator account has been created:</p>
-			<dl id="stepOutputSummary" class="clearfix">
+			<dl id="t3-install-123-stepoutputsummary" class="clearfix">
 				<dt>Username</dt>
 				<dd>admin</dd>
 				<dt>Password</dt>
