--- a/demo/Resources/Private/Templates/Installdemo.html
+++ b/demo/Resources/Private/Templates/Installdemo.html
@@ -15,7 +15,7 @@
 			<!-- ###TEMPLATE### begin-->
 			<p>Please select the package you want to install for your TYPO3 System.</p>
 			<form action="index.php?TYPO3_INSTALL[type]=database&mode=123&step=5" method="post">
-				<fieldset class="labelAfter">
+				<fieldset class="t3-install-form-label-after">
 					<input id="systemToInstallDemo" type="radio" name="systemToInstall" value="demo" checked="checked" />
 					<label for="systemToInstallDemo"><strong>Demo System (recommended)</strong><br />
 					This will install a TYPO3 system including a demo website with all basic configuration, content elements and a few extensions.</label><br />
@@ -26,7 +26,7 @@
 				<fieldset>
 					<input type="hidden" name="TYPO3_INSTALL[database_type]" value="import|CURRENT_TABLES+STATIC" />
 					<input type="hidden" name="TYPO3_INSTALL[database_import_all]" value="1" />
-					<button>Continue<span class="positive">&nbsp;</span></button>
+					<button>Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 			<!-- ###TEMPLATE### end-->
