--- a/introduction/Resources/Private/Subpackages/Introduction/Templates/Template.html
+++ b/introduction/Resources/Private/Subpackages/Introduction/Templates/Template.html
@@ -17,6 +17,15 @@
 					<label for="systemToInstallIntroduction"><strong>Introduction package (recommended)</strong><br />
 					This will install a TYPO3 system including a demo website with all basic configuration, content elements and a few extensions.</label><br />
 			<!-- ###TEMPLATE### end-->
+			<!-- ###PROGRESS_MESSAGE### begin -->
+			<div id="installationInProgress_Introduction" style="display:none">
+				<strong>
+					- Setting up the database<br /><br />
+					- Unpacking system files<br /><br />
+					- Importing Introduction Package
+				</strong>
+			</div>
+			<!-- ###PROGRESS_MESSAGE### end -->
 		</div>
 	</body>
 </html>
