--- a/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/extensions/indexed_search/tx_indexedsearch_pi1_template.html
+++ b/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/extensions/indexed_search/tx_indexedsearch_pi1_template.html
@@ -16,13 +16,13 @@
 
 <!-- ###SEARCH_FORM### begin -->
 <div class="tx-indexedsearch-searchbox searchbox-tmpl-css">
-<form action="###ACTION_URL###" method="post" name="tx_indexedsearch">
+<form action="###ACTION_URL###" method="post" name="tx_indexedsearch" id="tx_indexedsearch">
 	<fieldset>
 		<legend>Search form</legend>
 
 		<input type="hidden" name="tx_indexedsearch[_sections]" value="0" />
-		<input type="hidden" name="tx_indexedsearch[_freeIndexUid]" value="_" />
-		<input type="hidden" name="tx_indexedsearch[pointer]" value="0" />
+		<input type="hidden" name="tx_indexedsearch[_freeIndexUid]" id="tx_indexedsearch_freeIndexUid" value="_" />
+		<input type="hidden" name="tx_indexedsearch[pointer]" id="tx_indexedsearch_pointer" value="0" />
 		<!-- ###HIDDEN_FIELDS### begin -->
 		<input type="hidden" name="###HIDDEN_FIELDNAME###" value="###HIDDEN_VALUE###" />
 		<!-- ###HIDDEN_FIELDS### end -->
