Fixed the felogin login-form, the submit button was named "submit", so that the submit() method of the form could not be called
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@34683 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/extensions/felogin/tx_felogin_pi1_template.html
+++ b/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/extensions/felogin/tx_felogin_pi1_template.html
@@ -72,7 +72,7 @@
 	<!--###PERMALOGIN_VALID###-->
 
 	<div>
-		<input type="submit" name="submit" value="###LOGIN_LABEL###" />
+		<input type="submit" name="btn-submit" value="###LOGIN_LABEL###" />
 	</div>
 
 	<div class="felogin-hidden">
