--- a/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/css/msie6.css
+++ b/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/css/msie6.css
@@ -8,3 +8,7 @@ div#main {
 body.hideRightColumn div#main {
 	width:78%;
 }
+div#footer #licensebadge {
+	margin-top: 3px;
+	filter:alpha(opacity=30);
+	}
