--- a/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/introduction_package_site_structure_template.html
+++ b/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/introduction_package_site_structure_template.html
@@ -124,7 +124,7 @@
   <div id="footer">
     <h3>Footer</h3>
     <div id="footerMenu">
-      <p>Copyright 2009  &middot; <a href="http://www.typo3.org/">Typo3 Content Management System Framework</a> &middot;  You can put your information here</p>
+      <p>&copy 2010 &middot; <a href="http://www.typo3.org/">TYPO3 - Enterprise Content Management System</a> &middot; You can put your information here</p>
     </div>
   </div>
 </div>
