Fixed small validation error
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@35508 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/css/print.css
+++ b/introduction/Resources/Private/Subpackages/Introduction/Files/fileadmin/default/templates/css/print.css
@@ -6,7 +6,7 @@ div#navigationFirstLevel, div#navigationSecondLevel, div#topMenu, div#searchBox,
 div.footerFrame:first-child {display:block !important;}
 div#outerWrap { width:auto; margin:0;}
 div#contentWrap { background:none;}
-div#header { background:none !important;  height:auto; background-color:none; margin:0;}
+div#header { background:none !important;  height:auto; background-color:transparent; margin:0;}
 div#header h1 { color:#333; margin-top:0; position:inherit; margin-left:0; font-size:300%; font-weight:bold; line-height:1.3em;}
 div#footer { background:none; color:#333; font-size:80%;}
 div#main { float:left; width:100%;}
