Added type="submit" to the buttons in order to make them work in Internet Explorer 7. Fixes #8599
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@36090 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Templates/Installintroduction.html
+++ b/introduction/Resources/Private/Templates/Installintroduction.html
@@ -37,7 +37,7 @@
 				<fieldset>
 					<input type="hidden" name="TYPO3_INSTALL[database_type]" value="import|CURRENT_TABLES+STATIC" />
 					<input type="hidden" name="TYPO3_INSTALL[database_import_all]" value="1" />
-					<button>Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
+					<button type="submit">Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 		</div>
