--- a/introduction/Resources/Private/Templates/Password.html
+++ b/introduction/Resources/Private/Templates/Password.html
@@ -60,7 +60,7 @@
 					</span>
 				</fieldset>
 				<fieldset>
-					<button>Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
+					<button type="submit">Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
 				</fieldset>
 				<script type="text/javascript" src="###PATH_TO_RESOURCES###/Javascript/jscolor.js"></script>
 				<script language="javascript">
