--- a/introduction/Resources/Private/Templates/Finish.html
+++ b/introduction/Resources/Private/Templates/Finish.html
@@ -21,7 +21,7 @@
 			
 			<form method="post" action="../../">
 				<fieldset>
-					<button>Go to your Website<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
+					<button type="submit">Go to your Website<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 			<!-- ###TEMPLATE### end-->
