--- a/introduction/Resources/Private/Templates/Finishblank.html
+++ b/introduction/Resources/Private/Templates/Finishblank.html
@@ -24,7 +24,7 @@
 			</dl>
 			<form method="post" action="../">
 				<fieldset>
-					<button>Go to the TYPO3 backend<span class="positive">&nbsp;</span></button>
+					<button type="submit">Go to the TYPO3 backend<span class="positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
 			<!-- ###TEMPLATE### end-->
