Fixed bug #10610: An error message will be displayed when the required directories are not writable
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@39845 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Templates/Installintroduction.html
+++ b/introduction/Resources/Private/Templates/Installintroduction.html
@@ -34,6 +34,11 @@
 					<label for="systemToInstallEmpty"><strong>Blank System</strong><br />
 					This will install a bare TYPO3 system with basic database and folder structure.</label>
 				</fieldset>
+
+				<!-- ###NON_WRITABLE_DIRECTORIES_REMOVEWHENEMPTY### begin -->
+				<p class="typo3-message message-error"><strong>In order for the introduction package to work correctly, the following directories should be writable:
+					<ul>###NON_WRITABLE_DIRECTORIES###</ul></strong></p>
+				<!-- ###NON_WRITABLE_DIRECTORIES_REMOVEWHENEMPTY### end -->
 				<fieldset>
 					<input type="hidden" name="TYPO3_INSTALL[database_type]" value="import|CURRENT_TABLES+STATIC" />
 					<input type="hidden" name="TYPO3_INSTALL[database_import_all]" value="1" />
