Fixed bug #11764: Removed double slashes which caused an error in some browsers.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@41859 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Templates/Installintroduction.html
+++ b/introduction/Resources/Private/Templates/Installintroduction.html
@@ -51,7 +51,7 @@
 		</div>
 		###AVAILABLE_SUBPACKAGES_INSTALLMESSAGES###
 		<div id="installationInProgressLoader" style="display:none; margin-top: 30px;">
-			<div style="float: left; margin-right: 15px;"><img src="###PATH_TO_RESOURCES###/Images/ajax-loader.gif" /></div>
+			<div style="float: left; margin-right: 15px;"><img src="###PATH_TO_RESOURCES###Images/ajax-loader.gif" /></div>
 			<div style="float: left; margin-top: -3px;">This could take a few minutes,<br />please wait, the server tries its best.</div>
 			<div style="clear: both; padding-bottom: 10px;"></div>
 		</div>
