--- a/introduction/Resources/Private/Templates/Password.html
+++ b/introduction/Resources/Private/Templates/Password.html
@@ -56,16 +56,16 @@
 					</span>
 					
 					<span style="float: left; background: ###COLOR###; height: 101px; width: 131px; margin-top: 8px;" id="colorBackground">
-						<img src="###PATH_TO_RESOURCES###/Images/preview_icon.png" />
+						<img src="###PATH_TO_RESOURCES###Images/preview_icon.png" />
 					</span>
 				</fieldset>
 				<fieldset>
 					<button type="submit">Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
 				</fieldset>
-				<script type="text/javascript" src="###PATH_TO_RESOURCES###/Javascript/jscolor.js"></script>
+				<script type="text/javascript" src="###PATH_TO_RESOURCES###Javascript/jscolor.js"></script>
 				<script language="javascript">
 					//<![CDATA[
-						jscolor.dir = '###PATH_TO_RESOURCES###/Images/';
+						jscolor.dir = '###PATH_TO_RESOURCES###Images/';
 						var colorPicker = new jscolor.color(document.getElementById('colorPicker'), {hash: true, position: top, pickerFaceColor:'transparent',pickerFace:3,pickerBorder:0,pickerInsetColor:'#EFEFF4', styleElement:'colorBackground'});
 						colorPicker.showPicker();
 						passwordChanged();
