Fixed bug #11780: Place recheck button when directories are not writable.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@42109 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Templates/Installintroduction.html
+++ b/introduction/Resources/Private/Templates/Installintroduction.html
@@ -27,6 +27,7 @@
 		</script>
 		<div id="chooseSubpackage">
 			<p>Please select the package you want to install for your TYPO3 System.</p>
+			<!-- ###ALL_DIRECTORIES_WRITABLE_REMOVEWHENEMPTY### begin -->
 			<form action="index.php?TYPO3_INSTALL[type]=database&mode=123&step=5" method="post" onsubmit="displayInstallationInProgress(); return true;">
 				<fieldset class="t3-install-form-label-after">
 					###AVAILABLE_SUBPACKAGES###
@@ -35,16 +36,23 @@
 					This will install a bare TYPO3 system with basic database and folder structure.</label>
 				</fieldset>
 
-				<!-- ###NON_WRITABLE_DIRECTORIES_REMOVEWHENEMPTY### begin -->
-				<p class="typo3-message message-error"><strong>In order for the introduction package to work correctly, the following directories should be writable:
-					<ul>###NON_WRITABLE_DIRECTORIES###</ul></strong></p>
-				<!-- ###NON_WRITABLE_DIRECTORIES_REMOVEWHENEMPTY### end -->
 				<fieldset>
 					<input type="hidden" name="TYPO3_INSTALL[database_type]" value="import|CURRENT_TABLES+STATIC" />
 					<input type="hidden" name="TYPO3_INSTALL[database_import_all]" value="1" />
 					<button type="submit">Continue<span class="t3-install-form-button-icon-positive">&nbsp;</span></button>
 				</fieldset>
 			</form>
+			<!-- ###ALL_DIRECTORIES_WRITABLE_REMOVEWHENEMPTY### end -->
+			<!-- ###NON_WRITABLE_DIRECTORIES_REMOVEWHENEMPTY### begin -->
+			<form action="index.php?TYPO3_INSTALL[type]=database&mode=123&step=4" method="post">
+				<p class="typo3-message message-error"><strong>In order for the introduction package to work correctly, the following directories should be writable:
+				<ul>###NON_WRITABLE_DIRECTORIES###</ul></strong></p>
+
+				<fieldset>
+					<button type="submit">Recheck<span class="t3-install-form-button-icon-negative">&nbsp;</span></button>
+				</fieldset>
+			</form>
+			<!-- ###NON_WRITABLE_DIRECTORIES_REMOVEWHENEMPTY### end -->
 		</div>
 		<div id="installationInProgress_blank" style="display:none">
 			<strong>- Setting up the database </strong>
