Fixed bug #30063: Install Tool Step 4 - wrong rendering (Thanks to Thorsten Kahler)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@42458 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/Resources/Private/Templates/Password.html
+++ b/introduction/Resources/Private/Templates/Password.html
@@ -66,7 +66,7 @@
 				<script language="javascript">
 					//<![CDATA[
 						jscolor.dir = '###PATH_TO_RESOURCES###Images/';
-						var colorPicker = new jscolor.color(document.getElementById('colorPicker'), {hash: true, position: top, pickerFaceColor:'transparent',pickerFace:3,pickerBorder:0,pickerInsetColor:'#EFEFF4', styleElement:'colorBackground'});
+						var colorPicker = new jscolor.color(document.getElementById('colorPicker'), {hash: true, pickerPosition: 'bottom', pickerFaceColor:'transparent',pickerFace:3,pickerBorder:0,pickerInsetColor:'#EFEFF4', styleElement:'colorBackground'});
 						colorPicker.showPicker();
 						passwordChanged();
 					//]]>
@@ -82,7 +82,7 @@
 							'###CHECK_REAL_URL_COMPLIANCE_URL###',
 							{
 								method: 'get',
-								onSuccess: setUseRealURL,
+								onSuccess: setUseRealURL
 							}
 						);
 						
